--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section>
 <div class="flex-container">
-<img src="IMG_20230403_122312945_HDR~2.jpg" class="image my-2" alt="Bearded Robin">
+<img src="Images/Robin.jpg" class="image my-2" alt="Bearded Robin">
 <h2 class="font">Skills</h2>
 <ul class="mt-2 list">
 <li>Completed web design course through the App Brewery, sparking a genuine interest in web design</li>
@@ -37,7 +37,7 @@
 <li class="mt-2">Skilled in visual communication and graphic design principles</li>
 <li class="mt-2">Fluent in Swedish and English</li>
 <li class="mt-2">Adept at drawing (Portfolio can be provided)</li>
-<img src="IMG_20230829_185835437.jpg" class="image3 mt-3" alt="Cat with tongue out">
+<img src="Images/Sturm.jpg" class="image3 mt-3" alt="Cat with tongue out">
 <p class="mb-0">Storm</p>
 </ul></div>
 </section>
@@ -46,7 +46,7 @@
 
 <section>
 <div class="container col-lg-8">
-    <div class="child2"><img src="economic-growth-is-still-our-best-hope.jpg" class="image2" alt="Plants, growing">
+    <div class="child2"><img src="Images/Growth.jpg" class="image2" alt="Plants, growing">
     </div>
     <div class="child">
         <h2 class="font mx-4">Additional Info</h3>
@@ -56,7 +56,7 @@
         <li>Resilient, self-aware, and adaptable</li>
         </ul>
     </div>
-    <div class="child2"><img src="old-books-436498_1280.jpg" class="image2" alt="old books">
+    <div class="child2"><img src="Images/Books.jpg" class="image2" alt="old books">
     </div>
     <div class="child">
     <h2 class="font mx-4">Education</h3>
