--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
             Professionally, I’m drawn to the creative world of web and graphic design. I thrive on using technology to turn ideas into reality, whether it's digital art or intricate web designs. The challenges of web design keep me engaged, and I take pride in visualizing concepts and bringing them to life.
           </p>
           <p class="col-lg-12 mx-auto fs-5 text-muted">
-            My journey hasn’t been without challenges, particularly living with Asperger’s. While it comes with its own obstacles, it’s also helped shape me into who I am today. Overcoming limitations has led to valuable experiences, including forming meaningful friendships.
+            My journey hasn’t been without challenges, but they’ve shaped who I am today. Working through them has taught me discipline, patience, and resilience — and led to meaningful friendships along the way.
           </p>
           <p class="col-lg-12  mx-auto fs-5 text-muted">
-            My Asperger’s is an asset, giving me the ability to focus deeply on tasks and a sharp eye for detail. I strive to create designs that are both playful and thought-provoking, appealing to a wide audience. My ultimate goal is to land a rewarding web design job that allows me to pursue a digital nomad lifestyle, traveling the world while doing what I love.
+            I’m wired to focus deeply and notice the fine details others might miss, which I see as a strength in both life and design. My ultimate goal is to land a rewarding web design job that allows me to pursue a digital nomad lifestyle, traveling the world while doing what I love.
           </p>
           <p class="col-lg-12   mx-auto fs-5 text-muted">
             In collaboration, I value respect and integrity above all. While I enjoy working independently, I also appreciate teamwork and support when needed. I’m drawn to projects that challenge me creatively and offer the freedom to explore new ideas and places.
